[MIG][11.0] asdcust: Migrate module to v11
This commit migrates the project to v11. The following changes were
performed:
- Updated Odoo version from 10.0 -> 11.0
- Updated Python version from 2.7 -> 3.5
- Updated PostgreSQL version to 9.6
-Added missing new lines add end of file
- Removed encoding headers from all .py files

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
     - $HOME/.cache/pip
 
 addons:
+  postgresql: "9.6"
   apt:
     packages:
       - expect-dev
@@ -17,29 +18,26 @@ addons:
       - python-m2crypto
       - xmlstarlet
       - xsltproc
-      - xmlstarlet
       - openssl
       - poppler-utils
       - antiword
 
 python:
-  - "2.7"
+  - "3.5"
+
 env:
   global:
   - LINT_CHECK="0" TESTS="0"
-  - VERSION="10.0" ODOO_REPO="vauxoo/odoo"
+  - VERSION="11.0" ODOO_REPO="vauxoo/odoo"
   - INCLUDE="asdcust"
+
   matrix:
   - LINT_CHECK="1"
   - TESTS="1"
 
-virtualenv:
-  system_site_packages: true
-
 install:
   - git clone --single-branch --depth=1 https://github.com/vauxoo/maintainer-quality-tools.git -b master ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
-  - if [[ "${ENTERPRISE}" == "1" ]]; then git clone git@github.com:Vauxoo/enterprise.git -b $VERSION ${HOME}/enterprise; fi
   - travis_install_nightly
 
 script:
